# dxgi-capture-rs

./: .taplo.toml  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
benches/: capture_benchmarks.rs
example-stream/: Cargo.toml
example-stream/src/: main.rs  simd_utils.rs
src/: lib.rs
tests/: integration_tests.rs  tests.rs
